--- a/Pages/Comentarios/style.css
+++ b/Pages/Comentarios/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@100..900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden
+}
+
 body {
     height: 100vh;
 
@@ -12,11 +19,9 @@ body {
     /* Centraliza a imagem */
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden
+
+a {
+    text-decoration: none
 }
 
 nav {
