--- a/Pages/TelaIncial/style.css
+++ b/Pages/TelaIncial/style.css
@@ -7,6 +7,10 @@
     overflow-x: hidden
 }
 
+a {
+    text-decoration: none
+}
+
 body {
     background-image: url('imgs/background.png');
     background-size: cover;
