--- a/Pages/TelaComentar/style.css
+++ b/Pages/TelaComentar/style.css
@@ -84,10 +84,11 @@ main {
 
 .right {
     width: 70%;
-    height: 100%;
+    height: 80%;
     padding: 30px;
     border: 1px solid black;
     border-radius: 10px;
+    overflow-y: hidden;
 
     & .commit {
         display: flex;
@@ -98,6 +99,12 @@ main {
         }
 
     }
+}
+
+textarea {
+    background-color: transparent;
+    border-radius: 10px;
+    height: 100%;
 }
 
 .button {
