--- a/Pages/TelaADM/style.css
+++ b/Pages/TelaADM/style.css
@@ -130,8 +130,73 @@ button {
     border-radius: 5px;
     position: relative;
 }
-
+             
 button:hover {
     cursor: pointer;
-    background-color: #3c734fb8;
+    background-color: #f1573c86;
+}
+
+.container-modal {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.669);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.posicionar-modal {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    background-color: white;
+    border-radius: 10px;
+    width: 40%;
+}
+
+.modal {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+
+    & h2 {
+        text-align: center;
+    }
+}
+
+.btn-adm {
+    display: flex;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+
+.container-modal.abrir {
+    display: flex;
+}
+
+@keyframes abrirModal {
+    from {
+        opacity: 0;
+        transform: translate3d(0, -20px, -5px);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.abrir .posicionar-modal {
+    animation: abrirModal 0.5s;
+}
+
+@media screen and (max-width: 450px) {
+    .posicionar-modal {
+        width: 90%;
+    }
 }
