--- a/Pages/TelaMedico/style.css
+++ b/Pages/TelaMedico/style.css
@@ -74,6 +74,8 @@ main {
     justify-content: center;
     align-items: center;
     width: 100vw;
+    height: 80vh;
+    /* ver depois */
 }
 
 .container {
@@ -89,7 +91,7 @@ main {
     border: 1px solid #c1c1c1;
     border-radius: 8px;
     margin-bottom: 5px;
-    
+
 }
 
 .commit-left {
@@ -115,10 +117,19 @@ main {
     width: 90%;
 }
 
-.btn-responder {
+.btn-style {
     display: flex;
     justify-content: end;
     position: relative;
+    gap: 8px;
+}
+
+.fechar {
+    background-color: #F1563C;
+}
+
+.fechar:hover {
+    background-color: #f1573c87;
 }
 
 button {
@@ -134,4 +145,74 @@ button {
 button:hover {
     cursor: pointer;
     background-color: #3c734fb8;
+}
+
+.container-modal {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.669);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-top {
+    display: flex;
+}
+
+.posicionar-modal {
+    width: 60%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.modal {
+    margin-top: 20px;
+
+    & .modal-top {
+        margin-bottom: 15px;
+        background-color: #F3F3F3;
+        padding: 10px;
+        border-radius: 10px;
+    }
+}
+
+textarea {
+    height: 170px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #F3F3F3;
+}
+
+.container-modal.abrir {
+    display: flex;
+}
+
+.container-modal.fechar {
+    display: none;
+}
+
+@keyframes abrirModal {
+    from {
+        opacity: 0;
+        transform: translate3d(0, -20px, -5px);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.abrir .posicionar-modal {
+    animation: abrirModal 0.5s;
+}
+
+@media screen and (max-width: 450px) {
+    .posicionar-modal {
+        width: 90%;
+    }
 }
